REVISAO - Ajustes finais